# github-seo-repo-template

./: .cursorrules  .gitignore  CONTRIBUTING.md  LICENSE  PRODUCT_INTENT.md  README.md  RULES.md  TEMPLATE_USAGE.md  TOPIC_TAXONOMY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint-metadata.yml  validate-readme.yml
backend/: main.py  store.py
docs/: benchmarking.md  dogfooding.md  v0.1.md
docs/examples/: README.md
presets/: enterprise-internal.json  indie-hacker.json  open-source-maintainer.json  portfolio-dev.json  technical-writer.json
schema/: preset.schema.json  repo_evaluation.schema.json  rubric.json
src-tauri/: tauri.conf.json
src-tauri/icons/: README.md
src/gh_visibility/: __init__.py  analyzer.py  cli.py  github_client.py  llm_suggestions.py  models.py  output.py  presets.py  suggestions.py
tests/: __init__.py  test_analyzer.py  test_presets.py
web/: README.md  index.html  standalone.html
