[project]
name = "github-account-presentation-optimizer"
version = "0.1.0"
description = "CLI-first GitHub Account Presentation Optimizer that analyzes and scores how clearly repositories present themselves."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "GitHub SEO Repository Template Contributors" }
]
dependencies = [
  "requests>=2.32.0",
  "pyyaml>=6.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
]

[project.scripts]
gh-visibility = "gh_visibility.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

